# PwZN

./: pyproject.toml
Lab1/: Lab1.py  pg1513PL.txt
Lab3/: decorators.py
Lab4/: scraping.py
Lab5/: 3Dprint_models.json  scraping2.py
Lab7/: labsympy_new.ipynb
