[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.3.0"
ascii-graph = "^1.5.1"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
selenium = "^4.8.0"
sympy = "^1.11.1"
numpy = "^1.24.2"
jupyterlab = "^3.6.1"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
